--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "com.appspace.evyalert"
         minSdkVersion 17
         targetSdkVersion 24
-        versionCode 65
-        versionName "1.9.0"
+        versionCode 69
+        versionName "1.10.0"
     }
     buildTypes {
         release {
@@ -58,6 +58,7 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-storage:9.4.0'
+    compile 'com.google.firebase:firebase-ads:9.4.0'
     compile 'com.google.android.gms:play-services-location:9.4.0'
     compile 'com.google.android.gms:play-services-maps:9.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
