--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,11 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.appspace.evyalert"
+        applicationId "com.appspace.evyalerts"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 131
-        versionName "1.15.17"
+        versionCode 134
+        versionName "1.16.2"
     }
     buildTypes {
         release {
